feat(chat): add support for retrieving and displaying last chat messages
- Added lastMessage field to ChatInfoDTO and included it in relevant builders
- Introduced last-message flag in ChatInfoPropDTO
- Implemented findLastMessagesByChats in MessageRepository
- Enhanced ConsoleChatsRunner to show last message content in chat summaries